--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  background: linear-gradient(to bottom right, #A0E720, #FAED00);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
