--- a/src/HomePage/styles.css
+++ b/src/HomePage/styles.css
@@ -54,3 +54,27 @@
 .result-text {
     font-size: 30px;
 }
+
+.start-button {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    border-radius: 15px;
+    font-size: 1.2em;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    transition: all 0.2s ease-in-out;
+    width: 400px;
+    height: 50px;
+  }
+
+  .container {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+  }
+  
+  
