--- a/src/HomePage/styles.css
+++ b/src/HomePage/styles.css
@@ -25,6 +25,11 @@
     text-align: left;
     transition: background-color 0.5s;
 }
+
+.disabled {
+    pointer-events: none;
+}
+
 .answer-item.correct {
     background-color: #00CF00;
     transition: background-color 1s;
