--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@ body {
   padding: 0px;
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 100vh;
-  background: linear-gradient(to bottom right, #A0E720, #FAED00);
+  /*background: linear-gradient(to bottom right, #A0E720, #FAED00);*/
+  /*background-color: #23332b;*/
+  background-color: #1a2420;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
