--- a/src/HomePage/styles.css
+++ b/src/HomePage/styles.css
@@ -7,6 +7,7 @@
     border-radius: 15px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
     padding: 2rem;
+    margin: auto 2rem;
   }
 
 .button {
@@ -77,10 +78,17 @@
     max-width: 20rem;
     align-self: start;
 }
-  
+
+
 .card-header {
     display: grid;
     grid-template-columns: 2fr 1fr;
+}
+
+@media screen and (max-width: 500px) {
+    .card-header {
+        grid-template-columns: 1fr;
+    }
 }
 
 .card-header-btns {
