--- a/src/HomePage/styles.css
+++ b/src/HomePage/styles.css
@@ -43,9 +43,9 @@
     background-color: #d3d3d3;
 }
 
-.answer-item:hover {
+/* .answer-item:hover {
     background-color: #e3e3e3;
-}
+} */
 
 .disabled {
     pointer-events: none;
